--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #f2f2f2;
+    background-color: #f7f3b7;
     padding: 20px;
     text-align: center;
     border-bottom: 1px solid #ccc;
