--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #f7f3b7;
+    background-color: #a3cfbd;
     padding: 20px;
     text-align: center;
     border-bottom: 1px solid #ccc;
@@ -10,5 +10,15 @@ nav a {
     color: #333;
 }
 nav a:hover {
-    color: #555;
+    color: rgb(210, 225, 255);
+}
+h1 {
+    color: #a1e6dc;
+    font-size: 50px;
+}
+
+form.search {
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
