--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,237 +1,95 @@
-$color-primary: #f857a8;
-$color-secondary: #ff5858;
-$color-neutral-lt: #fff;
-$color-neutral-med: #ddd;
-$color-neutral-dk: #444;
-$a-tags: "a, a:active, a:hover, a:visited";
-$a-tags-no-hov: "a:link, a:visited, a:active";
-$headings-font: "Saira Semi Condensed", sans-serif;
-$shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
-
-@mixin main-gradient {
-  background: $color-primary;
-  background: -webkit-linear-gradient(45deg, $color-primary, $color-secondary);
-  background: linear-gradient(45deg, $color-primary, $color-secondary);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-@mixin shadow-box {
-  background-color: $color-neutral-lt;
-  box-shadow: $shadow;
-}
-
-@mixin skew {
-  transform: skew(-20deg);
-}
-
-@mixin unskew {
-  transform: skew(20deg);
-}
-
-/*-------------Reset-------------*/
-button {
-  background: none;
-  box-shadow: none;
-  border: none;
-  cursor: pointer;
-}
-
-button:focus,
-input:focus {
-  outline: 0;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-/*-------------Layout-------------*/
 body {
-  line-height: 1.5em;
-  padding: 0;
-  margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-section {
-  height: 100vh;
+.navbar {
+    font-size: 18px;
+    background: linear-gradient(9deg, #c02c2c, #2cc05d, #962cc0, #c02c51, #2cb6c0, #c0aa2c);
+    border-bottom: #615858 4px solid;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    padding-bottom: 10px;
 }
 
-#home {
-  background-color: #ddd;
-}
-
-#about {
-  background-color: #aaa;
-}
-
-#work {
-  background-color: #888;
-}
-
-#contact {
-  background-color: #666;
-}
-
-/*-------------Helpers-------------*/
-.skew {
-  @include skew;
-}
-
-.un-skew {
-  @include unskew;
-}
-
-/*-------------Nav-------------*/
-#nav-wrapper {
-  overflow: hidden;
-  width: 100%;
-  margin: 0 auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-}
-
-#nav {
-  @include shadow-box;
-  display: flex;
-  flex-direction: column;
-  font-family: $headings-font;
-  height: 4em;
-  overflow: hidden;
-
-  &.nav-visible {
-    height: 100%;
-    overflow: auto;
-  }
-}
-
-.nav {
-  display: flex;
-  height: 4em;
-  line-height: 4em;
-  flex-grow: 1;
-}
-
-.nav-link,
-.logo {
-  padding: 0 1em;
-}
-
-span.gradient {
-  @include main-gradient;
-  padding: 0 1em;
-  position: relative;
-  right: 1em;
-  margin-right: auto;
-
-  &:hover {
-    animation-name: logo-hover;
-    animation-duration: 0.3s;
-    animation-fill-mode: forwards;
-    animation-timing-function: cubic-bezier(0.17, 0.57, 0.31, 0.85);
-  }
-}
-
-h1.logo {
-  font-weight: 300;
-  font-size: 1.75em;
-  line-height: 0.75em;
-  color: $color-neutral-lt;
-}
-
-h1.logo #{$a-tags} {
-  text-decoration: none;
-  color: $color-neutral-lt;
-}
-
-.nav-link {
-  text-transform: uppercase;
-  text-align: center;
-  border-top: 0.5px solid $color-neutral-med;
-}
-
-#{$a-tags-no-hov} {
-  text-decoration: none;
-  color: $color-primary;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.right {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.btn-nav {
-  color: $color-primary;
-  padding-left: 2em;
-  padding-right: 2em;
-}
-
-@media (min-width: 800px) {
-  #nav-wrapper {
-    overflow: hidden;
-  }
-
-  #nav {
-    overflow: hidden;
-    flex-direction: row;
-  }
-
-  .nav-link {
-    border-top: none;
-  }
-
-  .right {
-    overflow: hidden;
-    flex-direction: row;
-    justify-content: flex-end;
-    position: relative;
-    left: 1.5em;
-    height: auto;
-  }
-
-  .btn-nav {
+.main-nav {
+    list-style-type: none;
     display: none;
-  }
-
-  .nav #{$a-tags-no-hov} {
-    &.active {
-      @include main-gradient;
-      color: #fff;
-    }
-  }
-
-  .nav-link-span {
-    @include unskew;
-    display: inline-block;
-  }
-
-  .nav-link {
-    @include skew;
-    color: #777;
-    text-decoration: none;
-
-    &:last-child {
-      padding-right: 3em;
-    }
-  }
-
-  a:hover.nav-link:not(.active) {
-    color: $color-neutral-dk;
-    background: $color-neutral-med;
-    background: linear-gradient(45deg, $color-neutral-lt, #ddd);
-  }
 }
 
-@keyframes logo-hover {
-  20% {
-    padding-right: 0em;
-  }
-  100% {
-    padding-right: 5em;
-  }
+.nav-links, .logo, .material-icons {
+    text-decoration: none;
+    color: ghostwhite;
+    opacity: 0.6;
+}
+
+.main-nav li {
+    text-align: center;
+    margin: 10px auto;
+}
+
+.logo {
+    display: flex;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-left: 30px;
+}
+
+.logo img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50px;
+}
+
+.logo p {
+    margin-top: 12px;
+    padding-left: 5px;
+}
+
+.toggle-nav {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.material-icons {
+    font-size: 24px;
+}
+
+.active {
+    display: block;
+}
+
+/* For large screen more than 600 */
+
+@media screen and (min-width:600px) {
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 0;
+        height: 70px;
+        align-items: center;
+    }
+    .toggle-nav {
+        display: none;
+    }
+    .main-nav {
+        display: flex;
+        justify-content: end;
+        margin-right: 30px;
+    }
+    .main-nav>li {
+        margin: 0;
+    }
+    .nav-links {
+        margin-left: 20px;
+    }
+    .logo {
+        margin-top: 0;
+    }
 }
