--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,3 +141,12 @@ nav ul li a:hover {
     display: none;
   }
 }
+
+.recherche input[type=text] {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+}
