--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ nav ul li a:hover {
   }
 }
 
-.recherche input[type=text] {
+.recherche input[type="text"] {
   float: right;
   padding: 6px;
   border: none;
@@ -154,20 +154,15 @@ h1 {
   font-size: 150px;
 }
 
-.espace
-{
-  margin-top: 100px;
-}
 
-.caca
-{
-  outline:none;
-  position:relative;
-  visibility:hidden;
+.carroussel {
+  height: 60vh;
+  display: flex;
+  align-items: center;
 }
-
 .splide-container {
-  max-width: 800px; /* Ajustez la largeur maximale selon vos besoins */
+  width: 800px;
+
   margin: 0 auto;
   overflow: hidden;
 }
@@ -177,6 +172,7 @@ h1 {
   color: #fff;
   padding: 50px;
   text-align: center;
+  height: 400px;
 }
 
 .splide-arrow {
@@ -198,4 +194,163 @@ h1 {
 
 .splide-arrow.next {
   right: 20px;
+}
+
+.splide__container {
+  box-sizing: border-box;
+  position: relative;
+}
+.splide__list {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  margin: 0 !important;
+  padding: 0 !important;
+  transform-style: preserve-3d;
+}
+.splide.is-initialized:not(.is-active) .splide__list {
+  display: block;
+}
+
+.splide {
+  outline: none;
+  position: relative;
+  visibility: hidden;
+}
+.splide.is-initialized,
+.splide.is-rendered {
+  visibility: visible;
+}
+.splide__slide {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  box-sizing: border-box;
+  -ms-flex-negative: 0;
+  flex-shrink: 1;
+  list-style-type: none !important;
+  margin: 0;
+  outline: none;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.splide__slide img {
+  vertical-align: bottom;
+}
+.splide__slider {
+  position: relative;
+}
+.splide__spinner {
+  animation: splide-loading 1s linear infinite;
+  border: 2px solid #999;
+  border-left-color: transparent;
+  border-radius: 50%;
+  bottom: 0;
+  display: inline-block;
+  height: 20px;
+  left: 0;
+  margin: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 20px;
+}
+.splide__track {
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+}
+@keyframes splide-loading {
+  0% {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(1turn);
+  }
+}
+.splide--draggable > .splide__slider > .splide__track,
+.splide--draggable > .splide__track {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.splide--fade > .splide__slider > .splide__track > .splide__list,
+.splide--fade > .splide__track > .splide__list {
+  display: block;
+}
+.splide--fade
+  > .splide__slider
+  > .splide__track
+  > .splide__list
+  > .splide__slide,
+.splide--fade > .splide__track > .splide__list > .splide__slide {
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  z-index: 0;
+}
+.splide--fade
+  > .splide__slider
+  > .splide__track
+  > .splide__list
+  > .splide__slide.is-active,
+.splide--fade > .splide__track > .splide__list > .splide__slide.is-active {
+  opacity: 1;
+  position: relative;
+  z-index: 1;
+}
+.splide--rtl {
+  direction: rtl;
+}
+.splide--ttb.is-active > .splide__slider > .splide__track > .splide__list,
+.splide--ttb.is-active > .splide__track > .splide__list {
+  display: block;
+}
+.splide__arrow {
+  -ms-flex-align: center;
+  align-items: center;
+  background: #ccc;
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+  display: -ms-flexbox;
+  display: flex;
+  height: 2em;
+  -ms-flex-pack: center;
+  justify-content: center;
+  opacity: 0.7;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 2em;
+  z-index: 1;
+}
+.splide__arrow svg {
+  fill: #000;
+  height: 1.2em;
+  width: 1.2em;
+}
+.splide__arrow:hover {
+  opacity: 0.9;
+}
+.splide__arrow:focus {
+  outline: none;
+}
+.splide__arrow--prev {
+  left: 1em;
+}
+.splide__arrow--prev svg {
+  transform: scaleX(-1);
+}
+.splide__arrow--next {
+  right: 1em;
+}
+
+#splide01 > ul{
+  display: none;
 }
