--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ nav .logo img {
 }
 nav .logo h1 {
   font-size: 1.1rem;
-  background: linear-gradient(to right, #b927fc 0%, #2c64fc 100%);
+  background: linear-gradient(to right, #fcaa27 0%, #d5e521 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
