--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -13,6 +13,7 @@ body {
 }
 
 nav {
+  background: linear-gradient(to right, #ffffff 5%, #ec8814 95%);
   padding: 5px 5%;
   display: flex;
   justify-content: space-between;
@@ -26,132 +27,75 @@ nav .logo {
   align-items: center;
 }
 nav .logo img {
-  height: 25px;
+  height: 90px;
   width: auto;
   margin-right: 10px;
 }
 nav .logo h1 {
-    font-size: 1.1rem;
-    background: linear-gradient(to right, #fcaa27 0%, #d5e521 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
-  nav ul {
-    list-style: none;
-    display: flex;
-  }
-  nav ul li {
-    margin-left: 1.5rem;
-  }
-  nav ul li a {
-    text-decoration: none;
-    color: #000;
-    font-size: 95%;
-    font-weight: 400;
-    padding: 4px 8px;
-    border-radius: 5px;
-  }
-  
-
-nav ul li a:hover {
-    background-color: #f5f5f5;
+  font-size: 50px;
+  background: linear-gradient(to right, #fcaa27 0%, #d5e521 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.hamburger {
-    display: none;
-    cursor: pointer;
+nav ul {
+  list-style: none;
+  display: flex;
+}
+nav ul li {
+  margin-left: 1.5rem;
+}
+nav ul li a {
+  text-decoration: none;
+  color: purple;
+  font-size: 25px;
+  font-weight: 400;
+  padding: 4px 8px;
+  border-radius: 5px;
+}
+
+nav ul li a:hover {
+  background-color: #ce7031;
+}
+
+
+#searchInput {
+    width: 300px;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
   }
   
-  .hamburger .line {
-    width: 25px;
-    height: 1px;
-    background-color: #1f1f1f;
-    display: block;
-    margin: 7px auto;
-    transition: all 0.3s ease-in-out;
-  }
-  .hamburger-active {
-    transition: all 0.3s ease-in-out;
-    transition-delay: 0.6s;
-    transform: rotate(45deg);
-  }
-  
-  .hamburger-active .line:nth-child(2) {
-    width: 0px;
-  }
-  
-  .hamburger-active .line:nth-child(1),
-  .hamburger-active .line:nth-child(3) {
-    transition-delay: 0.3s;
-  }
-  
-  .hamburger-active .line:nth-child(1) {
-    transform: translateY(12px);
-  }
-  
-  .hamburger-active .line:nth-child(3) {
-    transform: translateY(-5px) rotate(90deg);
-  }
-  
-  .menubar {
-    position: absolute;
-    top: 0;
-    left: -60%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    width: 60%;
-    height: 100vh;
-    padding: 20% 0;
-    background: rgba(255, 255, 255);
-    transition: all 0.5s ease-in;
-    z-index: 2;
-  }
-  .active {
-    left: 0;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  }
-  
-  .menubar ul {
+  #resultsList {
+    list-style-type: none;
     padding: 0;
-    list-style: none;
-  }
-  .menubar ul li {
-    margin-bottom: 32px;
-  }
-  
-  .menubar ul li a {
-    text-decoration: none;
-    color: #000;
-    font-size: 95%;
-    font-weight: 400;
-    padding: 5px 10px;
-    border-radius: 5px;
+    margin-top: 10px;
+    max-height: 200px; /* Limite de la hauteur pour la défilement */
+    overflow-y: auto; /* Activation du défilement vertical si nécessaire */
   }
   
-  .menubar ul li a:hover {
-    background-color: #f5f5f5;
-  }
-  @media screen and (max-width: 790px) {
-    .hamburger {
-      display: block;
-    }
-    nav ul {
-      display: none;
-    }
+  #resultsList li {
+    padding: 8px;
+    border-bottom: 1px solid #ccc;
   }
   
-  .recherche input[type="text"] {
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 17px;
+  #resultsList li:last-child {
+    border-bottom: none;
   }
-  h1 {
-    font-size: 150px;
+h1 {
+  text-align: center;
+  color: purple;
+}
+footer {
+    background: linear-gradient(to right, #ffffff 5%, #ec8814 95%);
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%; 
+    background-color: #f8f9fa;
+    padding: 20px;
+    text-align: center; 
+    border-top: 1px solid #ccc; 
   }
-  
