--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 nav {
+  background: linear-gradient(to right, #ffffff 5%, #ec8814 95%);
   padding: 5px 5%;
   display: flex;
   justify-content: space-between;
@@ -26,12 +27,12 @@ nav .logo {
   align-items: center;
 }
 nav .logo img {
-  height: 25px;
+  height: 90px;
   width: auto;
   margin-right: 10px;
 }
 nav .logo h1 {
-  font-size: 1.1rem;
+  font-size: 50px;
   background: linear-gradient(to right, #fcaa27 0%, #d5e521 100%);
   -webkit-background-clip: text;
   background-clip: text;
@@ -47,314 +48,110 @@ nav ul li {
 }
 nav ul li a {
   text-decoration: none;
-  color: #000;
-  font-size: 95%;
+  color: purple;
+  font-size: 25px;
   font-weight: 400;
   padding: 4px 8px;
   border-radius: 5px;
 }
 
 nav ul li a:hover {
-  background-color: #f5f5f5;
+  background-color:  #ce7031;
 }
 
-.hamburger {
-  display: none;
-  cursor: pointer;
-}
 
-.hamburger .line {
-  width: 25px;
-  height: 1px;
-  background-color: #1f1f1f;
-  display: block;
-  margin: 7px auto;
-  transition: all 0.3s ease-in-out;
-}
-.hamburger-active {
-  transition: all 0.3s ease-in-out;
-  transition-delay: 0.6s;
-  transform: rotate(45deg);
-}
 
-.hamburger-active .line:nth-child(2) {
-  width: 0px;
-}
 
-.hamburger-active .line:nth-child(1),
-.hamburger-active .line:nth-child(3) {
-  transition-delay: 0.3s;
-}
 
-.hamburger-active .line:nth-child(1) {
-  transform: translateY(12px);
-}
-
-.hamburger-active .line:nth-child(3) {
-  transform: translateY(-5px) rotate(90deg);
-}
-
-.menubar {
-  position: absolute;
-  top: 0;
-  left: -60%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  width: 60%;
-  height: 100vh;
-  padding: 20% 0;
-  background: rgba(255, 255, 255);
-  transition: all 0.5s ease-in;
-  z-index: 2;
-}
 .active {
   left: 0;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-.menubar ul {
+#searchInput {
+  width: 300px;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+#resultsList {
+  list-style-type: none;
   padding: 0;
-  list-style: none;
-}
-.menubar ul li {
-  margin-bottom: 32px;
-}
-
-.menubar ul li a {
-  text-decoration: none;
-  color: #000;
-  font-size: 95%;
-  font-weight: 400;
-  padding: 5px 10px;
-  border-radius: 5px;
+  margin-top: 10px;
+  max-height: 200px; /* Limite de la hauteur pour la défilement */
+  overflow-y: auto; /* Activation du défilement vertical si nécessaire */
 }
 
-.menubar ul li a:hover {
-  background-color: #f5f5f5;
-}
-@media screen and (max-width: 790px) {
-  .hamburger {
-    display: block;
-  }
-  nav ul {
-    display: none;
-  }
+#resultsList li {
+  padding: 8px;
+  border-bottom: 1px solid #ccc;
 }
 
-.recherche input[type="text"] {
-  float: right;
-  padding: 6px;
-  border: none;
-  margin-top: 8px;
-  margin-right: 16px;
-  font-size: 17px;
-}
-h1 {
-  font-size: 150px;
+#resultsList li:last-child {
+  border-bottom: none;
 }
 
 
-.carroussel {
-  height: 60vh;
-  display: flex;
-  align-items: center;
-}
-.splide-container {
-  width: 800px;
-
+.carousel {
+  position: relative;
+  max-width: 600px;
   margin: 0 auto;
   overflow: hidden;
 }
 
-.splide-slide {
-  background-color: #ccc;
-  color: #fff;
-  padding: 50px;
-  text-align: center;
-  height: 400px;
-}
-
-.splide-arrow {
-  font-size: 24px;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 10px;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  z-index: 1000;
-}
-
-.splide-arrow.prev {
-  left: 20px;
-}
-
-.splide-arrow.next {
-  right: 20px;
-}
-
-.splide__container {
-  box-sizing: border-box;
+.carousel-images {
   position: relative;
-}
-.splide__list {
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  margin: 0 !important;
-  padding: 0 !important;
-  transform-style: preserve-3d;
-}
-.splide.is-initialized:not(.is-active) .splide__list {
-  display: block;
-}
-
-.splide {
-  outline: none;
-  position: relative;
-  visibility: hidden;
-}
-.splide.is-initialized,
-.splide.is-rendered {
-  visibility: visible;
-}
-.splide__slide {
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  box-sizing: border-box;
-  -ms-flex-negative: 0;
-  flex-shrink: 1;
-  list-style-type: none !important;
-  margin: 0;
-  outline: none;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
-.splide__slide img {
-  vertical-align: bottom;
-}
-.splide__slider {
-  position: relative;
-}
-.splide__spinner {
-  animation: splide-loading 1s linear infinite;
-  border: 2px solid #999;
-  border-left-color: transparent;
-  border-radius: 50%;
-  bottom: 0;
-  display: inline-block;
-  height: 20px;
-  left: 0;
-  margin: auto;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 20px;
-}
-.splide__track {
+  width: 100%;
+  height: 300px; 
   overflow: hidden;
-  position: relative;
-  z-index: 0;
 }
-@keyframes splide-loading {
-  0% {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(1turn);
-  }
-}
-.splide--draggable > .splide__slider > .splide__track,
-.splide--draggable > .splide__track {
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.splide--fade > .splide__slider > .splide__track > .splide__list,
-.splide--fade > .splide__track > .splide__list {
-  display: block;
-}
-.splide--fade
-  > .splide__slider
-  > .splide__track
-  > .splide__list
-  > .splide__slide,
-.splide--fade > .splide__track > .splide__list > .splide__slide {
-  left: 0;
-  opacity: 0;
+
+.carousel-images img {
+  width: 100%;
+  height: 300px;
   position: absolute;
   top: 0;
-  z-index: 0;
+  left: 0;
+  transition: opacity 0.5s ease;
+  opacity: 0;
 }
-.splide--fade
-  > .splide__slider
-  > .splide__track
-  > .splide__list
-  > .splide__slide.is-active,
-.splide--fade > .splide__track > .splide__list > .splide__slide.is-active {
+
+.carousel-images img.active {
   opacity: 1;
-  position: relative;
-  z-index: 1;
 }
-.splide--rtl {
-  direction: rtl;
-}
-.splide--ttb.is-active > .splide__slider > .splide__track > .splide__list,
-.splide--ttb.is-active > .splide__track > .splide__list {
-  display: block;
-}
-.splide__arrow {
-  -ms-flex-align: center;
-  align-items: center;
-  background: #ccc;
-  border: 0;
-  border-radius: 50%;
-  cursor: pointer;
-  display: -ms-flexbox;
-  display: flex;
-  height: 2em;
-  -ms-flex-pack: center;
-  justify-content: center;
-  opacity: 0.7;
-  padding: 0;
+
+button {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 2em;
-  z-index: 1;
-}
-.splide__arrow svg {
-  fill: #000;
-  height: 1.2em;
-  width: 1.2em;
-}
-.splide__arrow:hover {
-  opacity: 0.9;
-}
-.splide__arrow:focus {
-  outline: none;
-}
-.splide__arrow--prev {
-  left: 1em;
-}
-.splide__arrow--prev svg {
-  transform: scaleX(-1);
-}
-.splide__arrow--next {
-  right: 1em;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
-#splide01 > ul{
-  display: none;
+.prev {
+  left: 0;
 }
 
-p{
+.next {
+  right: 0;
+}
+
+p {
   margin-left: 245px;
+}
+
+footer {
+  background: linear-gradient(to right, #ffffff 5%, #ec8814 95%);
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%; 
+  background-color: #f8f9fa;
+  padding: 20px;
+  text-align: center; 
+  border-top: 1px solid #ccc; 
 }
